--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,62 @@
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+}
+
+.container {
+width: 30rem;
+max-width: 100%;
+margin: auto;
+padding: 2rem;
+}
+
+form {
+  width: 100%;
+  padding-bottom: 1rem;
+}
+
+input {
+  height: 30px;
+  display: block;
+  width: 100%;
+  border: none;
+  margin-top: 1rem;
+  border-bottom: .5px solid grey;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-transition-delay: 9999s;
+    -webkit-transition: color 9999s ease-out, background-color 9999s ease-out;
+}
+
+
+button {
+  line-height: 40px;
+  width: 100%;
+  margin-top: 1.5rem;
+  vertical-align: middle;
+  border: 1px solid grey;
+  display: block;
+  padding: 0;
+  border-radius: 20px;
+  color: #111111;
+  cursor: pointer;
+  background: rgba(138, 208, 188, 0.2);
+  transition: background 0.2s;
+}
+
+button:hover {
+  background: rgba(138, 208, 188, 0.8);
 }
